# vgm-data-xtractor

./: .gitignore  CMakeLists.txt  README.md
docs/: index.html  index.js  index.wasm  vgmdata.js  vgmdata.wasm
emsdk/: CMakeLists.txt
html/: index.html  index.js  index.wasm
raylib/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  functions.c  functions.h  gui_file_dialogs.h  main.c  shell.html  vgmreader.c  vgmreader.h
vgm-data-xtractor/: CMakeLists.txt  functions.c  functions.h  main.c  shell.html  vgmreader.c  vgmreader.h
vgmdata/: CMakeLists.txt  functions.c  functions.h  main.c  shell.html  vgmreader.c
